<resources>
    <string name="app_name">FreezeYou!</string>
    <string name="oneKeyFreeze">Onekey Freeze</string>
    <string name="oneKeyUF">Onekey Unfreeze</string>
    <string name="alertT1">Attention! \nDo not freeze the application which is very important to the system, that may cause the system to crash!</string>
    <string name="cancel">Cancel</string>
    <string name="chooseDetailAction">Please choose an action</string>
    <string name="added">Added</string>
    <string name="notice">Tips</string>
    <string name="freeze">Freeze</string>
    <string name="more">More</string>
    <string name="appDetail">Application Details</string>
    <string name="removeFromOneKeyList">Remove from the Onekey Freeze list</string>
    <string name="removeFromOneKeyUFList">Remove from the Onekey Unfreeze list</string>
    <string name="removeFromFreezeOnceQuit">Remove from the Freeze Once Quit list</string>
    <string name="removed">Removed</string>
    <string name="removeFailed">Failed to remove</string>
    <string name="addToOneKeyList">Add to the Onekey Freeze list</string>
    <string name="addToOneKeyUFList">Add to the Onekey Unfreeze list</string>
    <string name="addToFreezeOnceQuit">Add to the Freeze Once Quit list</string>
    <string name="addFailed">Failed to add</string>
    <string name="caution">CAUTION</string>
    <string name="cautionContent">Attention! \nDo not freeze the application which is very important to the system, that may cause the system to crash!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="requested">Requested</string>
    <string name="requestFailed">Failed to create request: </string>
    <string name="createOneKeyFreezeShortcut">Onekey Freeze</string>
    <string name="executed">Executed</string>
    <string name="exception">Exception: </string>
    <string name="launch">Run</string>
    <string name="mayUnrooted">No root permission or no-root mode has not been enabled</string>
    <string name="mayUnrootedOrOtherEx">Permissions may not be granted, targets have been uninstalled, or other exceptions have occurred</string>
    <string name="unfreeze">Unfreeze</string>
    <string name="unfreezedAndAskLaunch">Requested unfreeze, try running now?</string>
    <string name="unrootedOrCannotFindTheLaunchIntent">Unfreeze succeeded but unable to find the entrance of this application, or unfreeze failed due to the insufficient permission.</string>
    <string name="frozen">Frozen</string>
    <string name="OneKeyFreezeImmediately">Onekey Freeze</string>
    <string name="about">About</string>
    <string name="plsVisit">Please visit</string>
    <string name="viewMode">View Mode</string>
    <string name="onlyFrozen">Frozen only</string>
    <string name="onlyUF">Unfrozen only</string>
    <string name="shortCut">Shortcuts</string>
    <string name="notAvailable">N/A</string>
    <string name="displayAll">Show All</string>
    <string name="onlyOnekey">Onekey Freeze</string>
    <string name="uninstalled">Uninstalled</string>
    <string name="onlySA">System pre-installed</string>
    <string name="onlyUA">User Application</string>
    <string name="moreSettings">Settings</string>
    <string name="visitWebsite">Visit Website</string>
    <string name="addQQGroup">Join QQ Group</string>
    <string name="dangerZone">Danger Zone</string>
    <string name="disableMRootMode">Release no-root mode permission</string>
    <string name="disableMRootModeEx">If you enable the no-root mode success, you need to release it before uninstalling the application.</string>
    <string name="update">Update</string>
    <string name="common">General</string>
    <string name="openImmediately">Open Immediately</string>
    <string name="openImmediatelyEx">Open the application immediately after being unfrozen</string>
    <string name="hToUse">How to use</string>
    <string name="openAndUFImmediately">Unfreeze immediately then run when clicking the shortcut</string>
    <string name="openAndUFImmediatelyEx">Cannot use the shortcut to freeze the application any more.</string>
    <string name="quickView">Quick View</string>
    <string name="nCaution">Don\'t remind</string>
    <string name="nSCaution">No longer show the warning at startup</string>
    <string name="advance">Advanced</string>
    <string name="manualMode">Manual Mode</string>
    <string name="packageName">Package Name</string>
    <string name="disable_MRoot">Freeze - NO-ROOT</string>
    <string name="disable_Root">Freeze - ROOT</string>
    <string name="enable_MRoot">Unfreeze - NO-ROOT</string>
    <string name="enable_Root">Unfreeze - ROOT</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="disableAEnable">Freeze/Unfreeze/Run</string>
    <string name="copyPkgName">Copy Package Name</string>
    <string name="createDisEnableShortCut">Create a freeze and unfreeze shortcut</string>
    <string name="iconAEntry">Icons and Entrances</string>
    <string name="dialEntry">Use the dial pad to enter</string>
    <string name="dialEntry_Ex">*#*#373393968#*#* (*#*#FreezeYou#*#*) (Most Android devices support)</string>
    <string name="ciFinishedToast">Submitted, please wait for the launcher to refresh or restart the launcher.</string>
    <string name="ifUploadCrashLog">Detected an exception log that has occurred but has not been committed, do you want to upload this log?</string>
    <string name="search">Search</string>
    <string name="launchMode">Startup Mode</string>
    <string name="freezeImmediately">Freeze Immediately</string>
    <string name="UFImmediately">Unfreeze Immediately</string>
    <string name="plsRemoveUninstalledApplications">[Hint] You can remove the uninstalled application(s) out of the list</string>
    <string name="notificationBarFreezeImmediately">Freeze immediately after clicking the freeze unfreeze notification</string>
    <string name="onClickFunction">Click Function</string>
    <string name="chooseAction">Choose Action</string>
    <string name="autoUFOrFreeze">Automatic Freeze and Unfreeze</string>
    <string name="UFAndRun">Unfreeze and Run</string>
    <string name="autoUFOrFreezeAndRun">Automatic Freeze or Unfreeze and Run</string>
    <string name="freezeCompleted">Frozen</string>
    <string name="UFCompleted">Unfrozen</string>
    <string name="shortCutOneKeyFreezeAdditionalOptions">Shortcut OneKey Freeze Additional Options</string>
    <string name="askIfLockScreen">Do you want to lock the screen now?</string>
    <string name="devicePolicyManagerNotFound">No available Device Manager found</string>
    <string name="activated">Activated</string>
    <string name="disableConfirmation">Confirm cancellation?</string>
    <string name="disabled">Disabled</string>
    <string name="notUpdatedForALongTimeMessage">Has not been updated for a long time, do you want to check for update now?</string>
    <string name="uiStyle">Interface Style</string>
    <string name="willTakeEffectsNextLaunch">Will take effect the next time the application is launched</string>
    <string name="freezeAUF">Freeze and Unfreeze</string>
    <string name="notificationBar">Notification</string>
    <string name="disableSlideOut">Do not disappear when slide out</string>
    <string name="disableClickDisappear">Do not disappear after clicked</string>
    <string name="effectNextCreate">Take effects the next time created</string>
    <string name="helpTranslate">Help Translate</string>
    <string name="thanksList">Thanks List</string>
    <string name="automation">Automation</string>
    <string name="freezeAfterScreenLock">Onekey freeze after screen locked</string>
    <string name="backgroundService">Background Services</string>
    <string name="useForegroundService">Use the foreground service</string>
    <string name="serviceLongerEx">Reduce the probability of failure of the background function</string>
    <string name="getDisabledApplications">Get a list of frozen applications</string>
    <string name="enableApplications">Unfreeze Packages</string>
    <string name="disableApplications">Freeze Packages</string>
    <string name="clearIconCache">Clear Icon Cache</string>
    <string name="clearNameCache">Clear Name Cache of Applications</string>
    <string name="refreshCache">Refresh Cache</string>
    <string name="saveOnClickFunctionStatus">Save Click Function Status</string>
    <string name="accessibility_service_description">Listen to the foreground application changes. \nUsed to active the functions to avoid freezing foreground applications when automatic freezing, automatically freeze applications when they are not the foreground applications, etc.</string>
    <string name="configureAccessibilityService">Configure Accessibility Service</string>
    <string name="freezeOnceQuit">Leave Freeze</string>
    <string name="needActiveAccessibilityService">Need to enable Accessibility Service</string>
    <string name="invalidArguments">Invalid parameters</string>
    <string name="exceptionHC">An exception has occurred but the operation will continue: </string>
    <string name="faq">FAQ</string>
    <string name="executeImmediately">Execute</string>
    <string name="oneKeyLockScreen">Lock Screen</string>
    <string name="scheduledTasks">Scheduled tasks</string>
    <string name="copyAfterBeingFormatted">Copy After Being Formatted</string>
    <string name="showInRecents">Show in recents</string>
    <string name="mayHaveNoEffectsL">May have no effects on Android 4.4 and below</string>
    <string name="lesserToast">Fewer Toast Tips</string>
    <string name="avoidFreezeForegroundApplications">Avoid Freezing Foreground Applications</string>
    <string name="onlyMROOTModeUse">Only used in No-Root mode</string>
    <string name="organizationName">Organization Name</string>
    <string name="avoidFreezeNotifyingApplications">Avoid freezing notifying applications</string>
    <string name="needL">Requires Android 5.0 and newer</string>
    <string name="addToRemoveFrom">Add to/Remove from</string>
    <string name="shortcutAutoFUF">Shortcut auto freeze or unfreeze</string>
    <string name="shortcutAutoFUFEx">Frozen unfreeze, unfrozen freeze</string>
    <string name="workWithShortcutAutoFUF">Effective when \"Shortcut auto freeze or unfreeze\" is enabled</string>
    <string name="needCfmWhenFreeze">Extra confirmation when freeze</string>
    <string name="openImmediatelyAfterUF">Run immediately after unfreezing</string>
    <string name="allowEditWhCreateShortcut">Allow editing when creating shortcuts</string>
    <string name="manageUriAutoAllow">Manage URI Request Auto Allow List</string>
    <string name="cacheApplicationsIcons">Cache Applications Icons</string>
    <string name="sortBy">Sort by</string>
    <string name="sortBy_default">Default</string>
    <string name="sortBy_no">No sort</string>
    <string name="uf_ascending">Unfreeze ↑</string>
    <string name="uf_descending">Unfreeze ↓</string>
    <string name="ff_ascending">Freeze ↑</string>
    <string name="ff_descending">Freeze ↓</string>
    <string name="us_ascending">Using frequency ↑</string>
    <string name="us_descending">Using frequency ↓</string>
    <string name="saveSortMethodStatus">Save sort method status</string>
    <string name="selectAll">Select all</string>
    <string name="selectUnselected">Inverse selection</string>
    <string name="remove">Remove</string>
    <string name="newFolder">New Folder</string>
    <string name="newClassification">New category</string>
    <string name="myCustomization">My customization</string>
    <string name="selectFUFMode">Select freeze and unfreeze mode</string>
    <string name="forceStop">Force Stop</string>
    <string name="unfrozenUA">Unfrozen User App</string>
    <string name="lastInstall">Recently Installed</string>
    <string name="lastUpdate">Recently Updated</string>
    <string name="alphabetical">Alphabetical</string>
</resources>