<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_sca_menu_createDisEnableShortCut"
        android:title="@string/createDisEnableShortCut" />
    <item
        android:id="@+id/main_sca_menu_disableAEnable"
        android:title="@string/disableAEnable" />

    <item android:title="@string/addToRemoveFrom">
        <menu>
            <item
                android:id="@+id/main_sca_userDefined"
                android:title="@string/myCustomization">
                <menu>
                    <group
                        android:id="@+id/main_sca_menu_userDefined_menuGroup"
                        android:checkableBehavior="none" >
                        <item
                            android:id="@+id/main_sca_menu_userDefined_newClassification"
                            android:title="@string/newClassification"
                            android:orderInCategory="0"/>
                    </group>
                </menu>
            </item>
            <item
                android:id="@+id/main_sca_menu_addToOneKeyList"
                android:title="@string/addToOneKeyList" />
            <item
                android:id="@+id/main_sca_menu_addToOneKeyUFList"
                android:title="@string/addToOneKeyUFList" />
            <item
                android:id="@+id/main_sca_menu_addToFreezeOnceQuit"
                android:title="@string/addToFreezeOnceQuit" />
        </menu>
    </item>

    <item
        android:id="@+id/main_sca_menu_copyPkgName"
        android:title="@string/copyPkgName" />
    <item
        android:id="@+id/main_sca_menu_appDetail"
        android:title="@string/appDetail" />
    <item
        android:id="@+id/main_sca_menu_removeFromTheList"
        android:title="@string/remove" />
</menu>