<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/common">
        <CheckBoxPreference
            android:title="@string/openImmediately"
            android:summary="@string/openImmediatelyEx"
            android:key="openImmediately"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:title="@string/openAndUFImmediately"
            android:summary="@string/openAndUFImmediatelyEx"
            android:key="openAndUFImmediately"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dangerZone">
        <Preference
            android:title="@string/disableMRootMode"
            android:summary="@string/disableMRootModeEx">
            <intent
                android:targetPackage="cf.playhi.freezeyou"
                android:targetClass="cf.playhi.freezeyou.Uninstall"
                android:data="Uninstall" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>